--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,56 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+<%# ----------------------new form------------- %>
+<div class="container-fluid">
+    <div class="row no-gutter">
+        <!-- The image half -->
+        <div class="col-md-6 d-none d-md-flex bg-image"></div>
 
-   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
 
-  <div class="field">
-    <%= f.label :surname %><br />
-    <%= f.text_field :sirname %>
-  </div>
+        <!-- The content half -->
+        <div class="col-md-6 bg-light">
+            <div class="login d-flex align-items-center py-5">
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+                <!-- Demo content-->
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-10 col-xl-7 mx-auto">
+                            <h3 class="display-4">Split page!</h3>
+                            <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
+                            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                            <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+                                <div class="form-group mb-3">
+                                    <%= f.email_field :email, autofocus: true, autocomplete: "email",id: "inputEmail", type: "email", placeholder: "Email address" ,class: "form-control rounded-pill border-0 shadow-sm px-4" %>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <%= f.text_field :name, autofocus: true, autocomplete: "name",id: "inputName", type: "name", placeholder: "First Name" ,class: "form-control rounded-pill border-0 shadow-sm px-4" %>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <%= f.text_field :sirname, autofocus: true, autocomplete: "sirname",id: "inputSirname", type: "name", placeholder: "Last Name" ,class: "form-control rounded-pill border-0 shadow-sm px-4" %>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <%= f.password_field :password, autofocus: true, autocomplete: "new-password",id: "inputName", type: "password", placeholder: "Password" ,class: "form-control rounded-pill border-0 shadow-sm px-4" %>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "name",id: "inputName", type: "password", placeholder: "Confirm Password" ,class: "form-control rounded-pill border-0 shadow-sm px-4" %>
+                                </div>
+                                <div class="custom-control custom-checkbox mb-3">
+                                    <input id="customCheck1" type="checkbox" checked class="custom-control-input">
+                                    <label for="customCheck1" class="custom-control-label">Remember password</label>
+                                </div>
+                                <button type="submit" class="btn btn-primary btn-block text-uppercase mb-2 rounded-pill shadow-sm">Sign in</button>
+                                <div class="text-center d-flex justify-content-between mt-4"><p>
+                                    <%= render "devise/shared/links" %>
+                                </p></div>
+                            <% end %>
+                        </div>
+                    </div>
+                </div><!-- End -->
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+            </div>
+        </div><!-- End -->
 
-<%= render "devise/shared/links" %>
+    </div>
+</div>
