--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,6 +31,9 @@
                                     <%= f.text_field :sirname, autofocus: true, autocomplete: "sirname",id: "inputSirname", type: "name", placeholder: "Last Name" ,class: "form-control rounded-pill border-0 shadow-sm px-4" %>
                                 </div>
                                 <div class="form-group mb-3">
+                                    <%= f.text_field :role, autofocus: true, autocomplete: "role",id: "inputRole", type: "name", placeholder: "Role" ,class: "form-control rounded-pill border-0 shadow-sm px-4" %>
+                                </div>
+                                <div class="form-group mb-3">
                                     <%= f.password_field :password, autofocus: true, autocomplete: "new-password",id: "inputName", type: "password", placeholder: "Password" ,class: "form-control rounded-pill border-0 shadow-sm px-4" %>
                                 </div>
                                 <div class="form-group mb-3">
