--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -20,6 +20,9 @@
         <td><%= food.category %></td>
         <td><%= food.availability %></td>
         <td><%= food.price %></td>
+        <td>
+        <img src="<%=food.image%>"/>
+        </td>
         <td><%= link_to 'Show', food %></td>
         <td><%= link_to 'Edit', edit_food_path(food) %></td>
         <td><%= link_to 'Destroy', food, method: :delete, data: { confirm: 'Are you sure?' } %></td>
