--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -25,5 +25,10 @@
   <%= @room.floor %>
 </p>
 
+<p>
+  <strong>Image:</strong>
+  <img src="<%=@room.image%>"/>
+</p>
+
 <%= link_to 'Edit', edit_room_path(@room) %> |
 <%= link_to 'Back', rooms_path %>
