--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -26,11 +26,13 @@
     <%= form.text_field :price %>
   </div>
 
-  <fieldset>
-    <%= form.label :image, 'image' %>
-    <%= form.hidden_field :image_cache %>
-    <%= form.file_field :image%>
-  </fieldset>
+   <div class="field">
+    <fieldset>
+      <%= form.label :image, 'image' %>
+      <%= form.hidden_field :image_cache %>
+      <%= form.file_field :image%>
+   </fieldset>
+  </div>
 
   <div class="field">
     <%= form.label :floor %>
