--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -1,45 +1,43 @@
-<div class="row d-flex">
+<div class="container flexbox">
   <div class="row">
   <%# ----for food order--------- %>
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">
-      <i class="fas fa-utensils"></i>
-      FOOD ENTRY
-    </h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <button type="button" class="btn btn-primary">
-      <%= link_to "FOOD", foods_path, :method => "get" %>
-    </button>
-  </div>
-</div>
+    <div class="card mx-2 my-2" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">
+          <i class="fas fa-utensils"></i>
+          FOOD ENTRY
+        </h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <button type="button" class="btn btn-primary">
+          <%= link_to "FOOD", foods_path, :method => "get" %>
+        </button>
+      </div>
+    </div>
 
-<%# ------for aadding room------ %>
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">
-      <i class="fas fa-hotel"></i>
-      ROOM ENTRY
-    </h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <button type="button" class="btn btn-primary">
-      <%= link_to "ROOM", rooms_path, :method => "get" %>
-    </button>
-  </div>
-</div>
+    <%# ------for aadding room------ %>
+    <div class="card mx-2 my-2" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">
+          <i class="fas fa-hotel"></i>
+          ROOM ENTRY
+        </h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <button type="button" class="btn btn-primary">
+          <%= link_to "ROOM", rooms_path, :method => "get" %>
+        </button>
+      </div>
+    </div>
 
-<%# ----------for user entry------- %>
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title">
-      <i class="fas fa-users"></i>
-      GUEST ENTRY
-    </h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Edit Guest</a>
-  </div>
-</div>
-
-
+    <%# ----------for user entry------- %>
+    <div class="card mx-2 my-2" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">
+          <i class="fas fa-users"></i>
+          GUEST ENTRY
+        </h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Edit Guest</a>
+      </div>
+    </div>
   </div>
 </div>  
