--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :category %>
-    <%= form.text_field :category %>
+    <%= form.select :category, ["Veg", "Non-veg"] %>
   </div>
 
   <div class="field">
