--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,7 +1,10 @@
+<%= render 'shared/sidebar' %>
 
- 
-    <h3 class="text-dark p-3">WELCOME 💻 📱
-        <% if current_user == "Manager" %>
+<div id="main">
+  <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>  
+  <h2>Collapsed Sidebar</h2>
+  <p>Click on the hamburger menu/bar icon to open the sidebar, and push this content to the right.</p>
+  <% if current_user == "Manager" %>
         <%= render partial: 'shared/dashboard', locals: {foods: @foods } %> 
         
         <% else %>
@@ -10,12 +13,4 @@
           <%= render partial: "shared/book_room", locals: { rooms: @rooms } %>
         <% end %>
         
-
-    </h3>
- 
-
-
- 
-
-
- 
+</div>
