--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,6 +1,7 @@
 <!-- Side-Nav -->
-  <div class="side-navbar active-nav d-flex justify-content-between flex-wrap flex-column" id="sidebar">
+  <div class="side-navbar active-nav d-flex justify-content-between flex-wrap flex-column sidebar" id="mySidebar">
     <ul class="nav flex-column text-white w-100">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <a href="#" class="nav-link h3 text-white my-2">
         Responsive </br>SideBar Nav
       </a>
