--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -15,14 +15,7 @@ body {
     padding-top: 60px;
   }
   
-  .sidebar a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-  }
+  
   
   .sidebar a:hover {
     color: #f1f1f1;
@@ -59,4 +52,9 @@ body {
     .sidebar {padding-top: 15px;}
     .sidebar a {font-size: 18px;}
   }
+
+  .nostyle {
+    text-decoration: none;   
+}
+
   
