--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -1,46 +1,54 @@
-<%= form_with(model: food) do |form| %>
-  <% if food.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(food.errors.count, "error") %> prohibited this food from being saved:</h2>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <main class="page payment-page">
+    <section class="payment-form dark">
+      <div class="container">
+        <%= form_with(model: food) do |form| %>
+          <% if food.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(food.errors.count, "error") %> prohibited this food from being saved:</h2>
 
-      <ul>
-        <% food.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+              <ul>
+                <% food.errors.each do |error| %>
+                  <li><%= error.full_message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+
+          <div class="products">
+            <h3 class="title">Food Entry</h3>
+            <div class="card-details">
+            <div class="row">
+              <div class="form-group col-sm-7">
+                <label for="card-holder">Food Name</label>
+                <%= form.text_field :name, placeholder:"Food Name", class:"form-control" %>
+              </div>
+              <div class="form-group col-sm-5">
+                <label for="">Price</label>
+                <%= form.text_field :price, placeholder:"Price", class:"form-control" %>
+              </div>
+              <div class="form-group col-sm-8">
+                <label for="card-number">Image</label>
+                <%= form.file_field :image, placeholder:"Price", class:"form-control" %>
+              </div>
+              <div class="form-group col-sm-4">
+                <label for="cvc">Category</label>
+                <%= form.text_field :category, placeholder:"Category", class:"form-control" %>
+              </div>
+              <div class="form-group col-sm-4">
+                <label for="cvc">Availability</label>
+                <%= form.text_field :availability, placeholder:"Availabilty", class:"form-control" %>
+              </div>
+              <div class="form-group col-sm-12">
+                <%= form.submit "Submit", class:"btn btn-primary btn-block" %>
+              </div>
+            </div>
+          </div>
         <% end %>
-      </ul>
-    </div>
-  <% end %>
+      </div>
+    </section>
+  </main>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
 
-  <div class="field">
-    <%= form.label :category %>
-    <%= form.select :category, ["Veg", "Non-veg"] %>
-  </div>
 
-  <div class="field">
-    <%= form.label :availability %>
-    <%= form.check_box :availability %>
-  </div>
 
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price %>
-  </div>
-
-  <div class="field">
-  <fieldset>
-  <%= form.label :image, 'image' %>
-  <%= form.hidden_field :image_cache %>
-  <%= form.file_field :image%>
-</fieldset>
-
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
