--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
   </head>
 
   <body>
-  
-    <%= yield %>
-     </div>
-
+  <%= render 'shared/sidebar' %>
   <%= render 'shared/sidejs' %>
+
+    <%= yield %>
+
   </body>
 </html>
