--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -20,7 +20,7 @@
       <li href="#" class="nav-link">
           <%= link_to  destroy_user_session_path, method: :delete, class: 'nostyle' do%>
             <i class="fas fa-sign-out-alt"></i>
-            <span class="mx-2">Contact</span>
+            <span class="mx-2">Logout</span>
           <% end %>
       </li>
     </ul>
