--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -33,11 +33,11 @@
               </div>
               <div class="form-group col-sm-4">
                 <label for="cvc">Category</label>
-                <%= form.text_field :category, placeholder:"Category", class:"form-control" %>
+                <%= form.select :category, [['Select an option', nil], 'Veg', 'Non-veg','Dessert'], class:"form-control" %>
               </div>
               <div class="form-group col-sm-4">
-                <label for="cvc">Availability</label>
-                <%= form.text_field :availability, placeholder:"Availabilty", class:"form-control" %>
+                <%= check_box_tag(:availability) %>
+                <%= label_tag(:availability, "Available") %>
               </div>
               <div class="form-group col-sm-12">
                 <%= form.submit "Submit", class:"btn btn-primary btn-block" %>
