--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,1 +1,8 @@
-<%= render partial:"form" %>
+<div id="main">
+  <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>  
+  <%= render 'form', document: @document %>
+</div>
+
+
+
+
