--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Room</h1>
+<div id="main">
+  <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>  
+  <%= render 'form', room: @room %>
+</div>
 
-<%= render 'form', room: @room %>
 
-<%= link_to 'Back', rooms_path %>
+
+
+
+
+
+
