--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -23,11 +23,11 @@
             <span class="mx-2">Logout</span>
           <% end %>
       </li>
+     
     </ul>
-
-    <span href="#" class="nav-link h4 w-100 mb-5">
-      <a href=""><i class="bx bxl-instagram-alt text-white"></i></a>
-      <a href=""><i class="bx bxl-twitter px-2 text-white"></i></a>
-      <a href=""><i class="bx bxl-facebook text-white"></i></a>
+    
+    <span href="#" class="nav-link foot  w-100 mb-2">
+    <%= render 'shared/footer' %>
     </span>
+    
   </div>
