--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -41,6 +41,7 @@
               </div>
               <div class="form-group col-sm-12">
                 <%= form.submit "Submit", class:"btn btn-primary btn-block" %>
+                <%= link_to 'Back', foods_path %>
               </div>
             </div>
           </div>
