--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,5 +1,6 @@
 <div id="main">
-  <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>  
+  <%# <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>   %>
+  <%= render partial: 'shared/navbar'%>
   <%= render 'form', room: @room %>
 </div>
 
