--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -26,7 +26,7 @@
      
     </ul>
     
-    <span href="#" class="nav-link foot  w-100 mb-2">
+    <span href="#" class="nav-link foot  w-100 mb-2 pl-2">
     <%= render 'shared/footer' %>
     </span>
     
