--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -57,8 +57,11 @@ body {
     text-decoration: none;   
 }
 
+// -------footer------------
+
   .foot{
-    font-size: 11px;
+    font-size: 12px;
+    margin-left: 2rem;
   }
 
   
