--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,4 @@
-<style>
-.footer {
-   /* position: fixed; */
-   /* left: 0; */
-   /* bottom: 0; */
-   /* width: 100%; */
-   /* background-color: red; */
-   /* color: white; */
-   /* text-align: center; */
-}
-</style>
-<div class="footer">
+<div>
   <p>© Copyright 2021:All right reserved.
 <br>A product of Narmada Infosys.</p>
 </div>
